syntax = "proto3";

package agw.v1;

option go_package = "github.com/masallsome/masapigateway/proto/agw/v1;agwv1";

// AgwService defines the communication between Data Plane and Control Plane.
service AgwService {
  // StreamConfig establishes a persistent stream from Data Plane to Control Plane.
  // The Data Plane sends its Node identity, and the Control Plane pushes ConfigSnapshots.
  rpc StreamConfig(Node) returns (stream ConfigSnapshot);
}

// Node identifies a specific Data Plane instance.
message Node {
  string id = 1;       // Unique ID of the node
  string region = 2;   // Deployment region
  string version = 3;  // Binary version
}

// ConfigSnapshot contains the full configuration state for the Data Plane.
message ConfigSnapshot {
  string version_id = 1; // Opaque version string for tracking
  // TODO: Add actual config fields (Routes, Clusters, etc.) later
}
